--- a/Vecotor-in-memory-pdf/Pipfile
+++ b/Vecotor-in-memory-pdf/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+faiss-cpu = "*"
+langchainhub = "*"
+langchain = "*"
+langchain-community = "*"
 
 [dev-packages]
 
